--- a/asistencia.html
+++ b/asistencia.html
@@ -40,11 +40,18 @@
         </div>
     </div>        
 </div>
-</header>   
-
+</header>
+<main>  
 <div>
     <h2 class="text-center text-white">Para ponerte en contacto con nosotros te brindamos las siguientes opciones ...</h2>
 </div>
+
+
+<div class="videoIndex container">
+    <h2 class="text-center text-warning">Guia para devoluciones</h2>
+    <div class="videoIndex__tamaño ratio ratio-16x9 ">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uawiTS_oGd0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
 </main>
                                     <!-- Pie de Pagina -->
