--- a/arma-tu-pc.html
+++ b/arma-tu-pc.html
@@ -16,14 +16,13 @@
 <header class="encabezado">
     <div class="container-fluid">
         <h1 class="encabezado encabezado__titulo">TEKNUX</h1>
-        <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.xml" alt="logopagina">
+        <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.png" alt="logopagina">
                                     <!-- Menu de Pagina -->
-<div class="encabezado encabezado__navigation container-fluid bg-black">
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="nav nav-pills justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>                                
-                <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>     
+        <div class="row encabezado encabezado__navigation bg-black">
+            <div class="col-md-12">
+                <ul class="nav nav-pills justify-content-center">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>                                
+                    <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>     
                         <ul class="dropdown-menu">
                             <li><a class="nav-item dropdown-item" href="productos.html">Tienda Principal</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -33,20 +32,23 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Perifericos</a></li>
                         </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="arma-tu-pc.html">Arma Tu Pc</a></li>
-                <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="quienes-somos.html">¿Quienes Somos?</a></li>
-            </ul>                                      
-        </div>
-    </div>        
-</div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="arma-tu-pc.html">Arma Tu Pc</a></li>
+                    <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="quienes-somos.html">¿Quienes Somos?</a></li>
+                </ul>                                      
+            </div>
+        </div>        
+    </div>
+</header>
+
+<main>
                                 <!-- Multimedia -->
 <div>
     <img id="bannerATPC" src="images/BANNER GRANDE (1).png" alt="Banner">
     <h2 class="rampart text-center text-warning">¿Como empezar a armar tu pc?</h2>
 </div>
-<div align="center">
+<div class="">
     <iframe width="49%" height="315" src="https://www.youtube.com/embed/1xDYvOrx3Tg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Videoguia armar pc"></iframe>
     <iframe width="49%" height="315" src="https://www.youtube.com/embed/RlbvTU-Ujxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="consejos despues de armar el pc"></iframe>
 </div>
@@ -57,7 +59,9 @@
     <a href="https://www.google.com/?hl=es">Horarios |</a>
     <a href="https://www.google.com/?hl=es">Sucursales</a>
          <!-- Whatsapp -->
-    <div class="whatsapp"><a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono con enlace Whatsapp"></a></div>                            
+<div class="whatsapp">
+    <a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono con enlace Whatsapp"></a>
+</div>                            
          <!-- Iconos Pie -->
     <a href="https://www.youtube.com"><img class="footerPie__icono float-end" src="images/YouTube_23392.png" alt="Icono con enlace Youtube"></a>
     <a href="https://www.twitter.com"><img class="footerPie__icono float-end" src="images/580b57fcd9996e24bc43c53e.png" alt="Icono con enlace Twitter"></a>
