--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    <header class="encabezado">
-        <div class="container-fluid">
-            <h1 class="encabezado encabezado__titulo">TEKNUX</h1>
-            <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.xml" alt="logopagina">
+<header class="encabezado">
+    <div class="container-fluid">
+        <h1 class="encabezado encabezado__titulo">TEKNUX</h1>
+        <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.png" alt="logopagina">
+
                                     <!-- Menu de Pagina -->
-<div class="encabezado encabezado__navigation container-fluid bg-black">
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="nav nav-pills justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>                             
-                <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>   
+        <div class="row encabezado encabezado__navigation bg-black">
+            <div class="col-md-12">
+                <ul class="nav nav-pills justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>                             
+                    <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>   
                         <ul class="dropdown-menu">
                             <li><a class="nav-item dropdown-item" href="productos.html">Tienda Principal</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -35,25 +36,31 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Perifericos</a></li>
                         </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="arma-tu-pc.html">Arma Tu Pc</a></li>
-                <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="quienes-somos.html">¿Quienes Somos?</a></li>
-            </ul>                                      
-        </div>
-    </div>        
-</div>
-</header>     
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="arma-tu-pc.html">Arma Tu Pc</a></li>
+                    <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="quienes-somos.html">¿Quienes Somos?</a></li>
+                </ul>                                      
+            </div>
+        </div>        
+    </div>
+</header>
+
 <main>
                                     <!-- Multimedia -->
 <div class="videoIndex container">
     <div class="videoIndex__tamaño ratio ratio-16x9 ">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iuiO6rqYV4o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="video de presentacion"></iframe>
     </div>
+</div>
+
                                     <!-- Formulario -->
-<div>
-    <form action="send.php" method="post" enctype="text/plain">    
+<div class="formulario">
+    <form action="send.php" method="post" enctype="text/plain">
         <div class="row">
+            <div class="col-md-12 bg-dark">
+                <legend class="font-weight-bold text-warning">Registrate en Nuestra Web, y sumate a nosotros.</legend>
+            </div>
             <div class="col-md-4 offset-md-4">
                 <div class="mb-2 text-white">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
@@ -82,16 +89,19 @@
             </div>
         </div>
     </form>
-</div>
-    
+</div>  
 </main>
                                     <!-- Pie de Pagina -->
 <footer class="footerPie">
         <a href="https://www.google.com/?hl=es">Contacto |</a>
         <a href="https://www.google.com/?hl=es">Horarios |</a>
         <a href="https://www.google.com/?hl=es">Sucursales</a>
+
                                     <!-- Whatsapp -->
-        <div class="whatsapp"><a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono con enlace Whatsapp"></a></div>                            
+    <div class="whatsapp">
+        <a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono con enlace Whatsapp"></a>
+    </div>  
+
                                     <!-- Iconos Pie -->
         <a href="https://www.youtube.com"><img class="footerPie__icono float-end" src="images/YouTube_23392.png" alt="Icono con enlace Youtube"></a>
         <a href="https://www.twitter.com"><img class="footerPie__icono float-end" src="images/580b57fcd9996e24bc43c53e.png" alt="Icono con enlace Twitter"></a>
