--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -12,52 +12,55 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
 <header class="encabezado">
     <div class="container-fluid">
         <h1 class="encabezado encabezado__titulo">TEKNUX</h1>
-        <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.xml" alt="logopagina">
+        <img class="encabezado encabezado__logo img-fluid rounded float-end animate__animated animate__backInRight animate__slow" src="images/pixlr-bg-result.png" alt="logopagina">
                             <!-- Menu de Pagina -->
-<div class="encabezado encabezado__navigation container-fluid bg-black">
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="nav nav-pills justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>                             
-                <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>
-            <ul class="dropdown-menu">
-                <li><a class="nav-item dropdown-item" href="productos.html">Tienda Principal</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Procesadores</a></li>
-                <li><a class="dropdown-item" href="#">Motherboards</a></li>
-                <li><a class="dropdown-item" href="#">Placas de Video</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Perifericos</a></li>
-            </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="arma-tu-pc.html">Arma Tu Pc</a></li>
-                <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes Somos?</a></li>
-            </ul>                                      
-        </div>
-    </div>        
-</div>
+        <div class="row encabezado encabezado__navigation bg-black">
+            <div class="col-md-12">
+                <ul class="nav nav-pills justify-content-center">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>                             
+                    <li class="nav-item-dropdown"><a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>
+                <ul class="dropdown-menu">
+                    <li><a class="nav-item dropdown-item" href="productos.html">Tienda Principal</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Procesadores</a></li>
+                    <li><a class="dropdown-item" href="#">Motherboards</a></li>
+                    <li><a class="dropdown-item" href="#">Placas de Video</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Perifericos</a></li>
+                </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="arma-tu-pc.html">Arma Tu Pc</a></li>
+                    <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencia</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes Somos?</a></li>
+                </ul>                                      
+            </div>
+        </div>        
+    </div>
 </header>
 
 <main>
 <p>Somos una empresa que etc... etc. etc...</p>
-   <article class="padreFlex">
+    <article class="padreFlex">
    <a class="quitarDecorado" href="https://www.google.com/?hl=es"><div class="imagen1 textoEnImg"><h2>Proyectos</h2></div></a>
    <a class="quitarDecorado" href="https://www.google.com/?hl=es"><div class="imagen2 textoEnImg"><h2>Soporte</h2></div></a>
    <a class="quitarDecorado" href="https://www.google.com/?hl=es"><div class="imagen3 textoEnImg"><h2>¿Cómo empezo?</h2></div></a>
     </article>
 </main>
+
                             <!-- Pie de Pagina -->
 <footer class="footerPie">
     <a href="https://www.google.com/?hl=es">Contacto |</a>
     <a href="https://www.google.com/?hl=es">Horarios |</a>
     <a href="https://www.google.com/?hl=es">Sucursales</a>
                             <!-- Whatsapp -->
-    <div class="whatsapp"><a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono enlace Whatsapp"></a></div>                            
+<div class="whatsapp">
+    <a href="https://www.whatsapp.com/business/api?lang=es" target="blank"><img class="footerPie__icono" src="/images/WhatsApp-button-PNG.png" alt="Icono enlace Whatsapp"></a>
+</div>                            
                             <!-- Iconos Pie -->
     <a href="https://www.youtube.com"><img class="footerPie__icono float-end" src="images/YouTube_23392.png" alt="Icono enlace Youtube"></a>
     <a href="https://www.twitter.com"><img class="footerPie__icono float-end" src="images/580b57fcd9996e24bc43c53e.png" alt="Icono enlace Twitter"></a>
