--- a/productos.html
+++ b/productos.html
@@ -49,7 +49,7 @@
 
                             <!--- Carrousel Top --->
 <div class="container-fluid">
-    <div class="col-md-12 w-100 p-2 h-50">
+    <div class="col-md-12 mw-100 p-2 h-50">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -80,125 +80,76 @@
 </div>
 
                             <!-- Tabla de Productos -->
-<div class="table-responsive">
-    <table class="w-100 h-50 table table-dark table-striped table-bordered border-white rampart">
-        <tr>
-            <th class="text-warning">Modelo Cpu</th>
-            <th class="text-warning">Nucleos/Hilos</th>
-            <th class="text-warning">Memoria Cache</th>
-            <th class="text-warning">TDP</th>
-            <th class="text-warning">Base</th>
-            <th class="text-warning">Turbo</th>
-            <th class="text-warning">OverClock</th>
-            <th class="text-warning">Precio</th>
-        </tr>
-        <tr>
-            <td>Ryzen 7 1800X</td>
-            <td>8/16</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>3.6GHz</td>
-            <td>4.0GHz</td>		
-            <td>4.0GHz+</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>Ryzen 7 1700X</td>
-            <td>8/16</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>3.4GHz</td>
-            <td>3.8GHz</td>		
-            <td>3.8GHz+</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>Ryzen 7 1700</td>
-            <td>8/16</td>
-            <td>16MB</td>
-            <td>65W</td>
-            <td>3.0GHz</td>
-            <td>3.7GHz</td>		
-            <td>N/A</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>Ryzen 5 1600X</td>
-            <td>6/12</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>3.3GHz</td>
-            <td>3.7GHz</td>		
-            <td>3.7GHz+</td>
-            <td>$?</td>				
-        </tr>                  
-    </table>
-</div>
-                        
-                                <!--- Imagen de Tabla 2 --->
-<div class="container-fluid">
-    <div class="row bg-black">
-        <h1 class="bannerMother text-center"> Motherboards </h1>
+<div class="row">
+<div class="col-sm-6">
+<div class="card-deck">
+    <div class="card text-warning bg-dark mb-3 card__Tamaño">
+        <img class="card-img-top" src="/images/intelvsamd.jpg" alt="intelvsamdprocesadores">
+        <div class="card-body">
+            <h5 class="card-title">Procesadores</h5>
+            <h6 class="card-subtitle">Intel vs AMD</h6>
+            <p class="card-text">El cerebro de nuestro armado gamer, potencia y velocidad son fundamentales, la amplia variedad, cubre las amplias gamas.</p>
+            <a href="procesadores.html" class="btn btn-warning">¡Comprar!</a>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Nuevas generaciones.</small>
+        </div>
     </div>
 </div>
-                                <!--- Tabla 2 --->
-<div class="table-responsive">
-    <table class="w-100 h-50 table table-dark table-striped table-bordered border-white rampart">
-        <tr>
-            <th class="text-warning">Modelo</th>
-            <th class="text-warning">Chipset</th>
-            <th class="text-warning">Memoria Cache</th>
-            <th class="text-warning">TDP</th>
-            <th class="text-warning">Slot Ram</th>
-            <th class="text-warning">Turbo</th>
-            <th class="text-warning">OverClock</th>
-            <th class="text-warning">Precio</th>
-        </tr>
-        <tr>
-            <td>B450</td>
-            <td>Am3+</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>4</td>
-            <td>4.0GHz</td>		
-            <td>4.0GHz+</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>B550</td>
-            <td>Am3+</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>4</td>
-            <td>3.8GHz</td>		
-            <td>3.8GHz+</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>A320</td>
-            <td>Am3+</td>
-            <td>16MB</td>
-            <td>65W</td>
-            <td>2</td>
-            <td>3.7GHz</td>		
-            <td>N/A</td>
-            <td>$?</td>				
-        </tr>
-        <tr>
-            <td>z90</td>
-            <td>1150</td>
-            <td>16MB</td>
-            <td>95W</td>
-            <td>6</td>
-            <td>3.7GHz</td>		
-            <td>3.7GHz+</td>
-            <td>$?</td>				
-        </tr>                    
-        </table>
 </div>
+<div class="col-sm-6">
+    <div class="card-deck">
+        <div class="card text-warning bg-dark mb-3 card__Tamaño">
+            <img class="card-img-top" src="/images/Motherboards.jpg" alt="intelvsamdprocesadores">
+            <div class="card-body">
+                <h5 class="card-title">Motherboards</h5>
+                <h6 class="card-subtitle">Chipset Intel / Chipset AMD</h6>
+                <p class="card-text">"Nuestra placa madre, bien puesto el nombre de madre, se encarga de unir a todos los componentes y hacerlos trabajar con eficacia.</p>
+                <a href="motherboards.html" class="btn btn-warning">¡Comprar!</a>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Con Puertos HDMI y Salidas de audio 7.1 (aptas para placas wifi)</small>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-sm-6">
+        <div class="card-deck">
+            <div class="card text-warning bg-dark mb-3 card__Tamaño">
+                <img class="card-img-top" src="/images/ram1.jpg" alt="intelvsamdprocesadores">
+                <div class="card-body">
+                    <h5 class="card-title">Memorias Ram</h5>
+                    <h6 class="card-subtitle">DDR3, DDR4, DDR5, DDR6</h6>
+                    <p class="card-text">Nuestras obreras, son aquellas que guardan y procesan todos los procesos que realizamos en nuestro equipo. La velocidad y capacidad de almacenamiento, son claves.</p>
+                    <a href="procesadores.html" class="btn btn-warning">¡Comprar!</a>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Disponibles hasta 128 gb</small>
+                </div>
+            </div>
+        </div>
+</div>
+<div class="col-sm-6">
+    <div class="card-deck">
+        <div class="card text-warning bg-dark mb-3 card__Tamaño">
+            <img class="card-img-top" src="/images/unnamed.png" alt="intelvsamdprocesadores">
+            <div class="card-body">
+                <h5 class="card-title">Placas de Video</h5>
+                <h6 class="card-subtitle">NVIDIA VS AMD</h6>
+                <p class="card-text">Nuestra retina de nuestro armado gamer, la calidad de nuestra placa de video, determina la calidad de experiencia grafica a la cual vamos a poder acceder.</p>
+                <a href="procesadores.html" class="btn btn-warning">¡Comprar!</a>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">¡AHORA EN 12 CUOTAS!</small>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
                      <!-- Carrousel Bot -->
 <div class="container-fluid">
-    <div class="col-md-12 mw-100">
+    <div class="col-md-12 mw-100 p-2">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
